<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/registrasi"
            android:textAlignment="center"
            android:textColor="#FAFAFA"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/nama_lengkap"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_text"
            android:ems="10"
            android:hint="@string/masukkan_nama_anda"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/alamat_email"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_text"
            android:ems="10"
            android:hint="@string/masukkan_email_anda"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text"
            android:ems="10"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/ulangi_password_lagi"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_text"
            android:ems="10"
            android:hint="@string/ulangi_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/punya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/text"
                tools:ignore="TextContrastCheck,VisualLintOverlap" />

            <TextView
                android:id="@+id/klik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/klik_disini"
                android:textAlignment="textEnd"
                android:textColor="#212121" />
        </RelativeLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/daftar"
            android:textColor="#5D4037"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>


</RelativeLayout>