<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/alamat_email"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/masukkan_email_anda"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/txtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="#FAFAFA"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_text"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/punya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/belum_punya_akun"
                android:textColor="@color/text"
                tools:ignore="TextContrastCheck,VisualLintOverlap" />

            <TextView
                android:id="@+id/klik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/klik_disini"
                android:textAlignment="textEnd"
                android:textColor="#212121" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/masuk"
            android:textColor="#5D4037"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</RelativeLayout>