<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text"
    tools:context=".Activity.Sampah.BotolPlastik"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:paddingTop="0dp"
                    android:background="@drawable/botol_plastik_view" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/rounded_back"
                    app:menu="@menu/back_menu" />

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="-5dp"
                    android:layout_marginTop="-5dp"
                    android:background="@drawable/arrow_back"
                    tools:ignore="SpeakableTextPresentCheck" />
            </RelativeLayout>


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:text="Title"
                android:textColor="@color/primary"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="Masukkan Jumlah Sampah (Kg)"
                android:textColor="@color/primary"
                android:textSize="18dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/jumlah_edit"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button_tambah"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/tambah_btn"
                    android:text="+"
                    android:textSize="30dp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/jumlah_edit"
                    app:layout_constraintTop_toTopOf="parent"></Button>

                <Button
                    android:id="@+id/button_kurang"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/kurang_btn"
                    android:text="-"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/jumlah_edit"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="Deskripsi"
                android:textColor="@color/primary"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/desc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/botol_mineral_desc1"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis0"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis1"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis2"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis3"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis4"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis5"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis6"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis7"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis8"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/jenis9"
                android:textColor="@color/primary"
                android:textSize="17dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="100dp"
                android:justificationMode="inter_word"
                android:text="@string/botol_desc2"
                android:textColor="@color/primary"
                android:textSize="17dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/btn_kumpul"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/action_btn_left"
            android:textColor="@color/black"
            android:text="Kumpulkan" />

        <Button
            android:id="@+id/btn_angkut"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/action_btn_right"
            android:textColor="@color/primary"
            android:text="Angkut" />
    </LinearLayout>
</RelativeLayout>